--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family:'Courier New', Courier, monospace
+}
 body {
     margin: 0;
     background-color: rgb(36, 25, 46);
@@ -13,4 +16,39 @@ body {
     width: 200px;
     height: 200px;
     margin: 0 auto;
+}
+
+div {
+    background-color: rgb(1, 40, 73);
+    padding: 20px;
+    border: 2px solid rgb(255, 255, 255);
+    margin: 10px;
+}
+
+h3 {
+    color: rgb(238, 214, 255);
+}
+img {
+    width: 200px;
+}
+
+img:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
+.enlaces{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    list-style: none;
+}
+
+.enlaces:hover{
+    color: rgb(206, 106, 219);
+    font-size: 1.2em;
+    text-decoration: underline;
+}
+
+.u-list {
+    list-style-type:circle
 }
