--- a/style.css
+++ b/style.css
@@ -1,12 +1,46 @@
-* {
-    font-family:'Courier New', Courier, monospace
-}
 body {
     margin: 0;
-    background-color: rgb(36, 25, 46);
-    color: rgb(255, 255, 255);
 }
 
+header {
+    background-color: #EF9595;
+}
+
+header a {
+    text-decoration: none;
+    color: #EFD595;
+}
+header a:hover {
+    color:#dab24c;
+    font-size: 1.1em;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 13vh;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    text-decoration: none;
+    align-items: center;
+}
+nav ul li {
+    padding: 10px;
+}
+
+header img {
+    width: 50px;
+}
+
+header div {
+    display: flex;
+    align-items: center;
+}
 .img-perfil {
     border-radius: 100%;
     border: 2px solid rgb(255, 255, 255);
@@ -19,10 +53,7 @@ body {
 }
 
 div {
-    background-color: rgb(1, 40, 73);
     padding: 20px;
-    border: 2px solid rgb(255, 255, 255);
-    margin: 10px;
 }
 
 h3 {
