--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
+    cursor: url('./imagenes/hoja.png'), auto;
 }
 
 header {
     background-color: #EF9595;
+    opacity: 0.7;
 }
 
 header a {
@@ -13,6 +15,7 @@ header a {
 header a:hover {
     color:#dab24c;
     font-size: 1.1em;
+    cursor: url('./imagenes/hoja-click.png'), auto;
 }
 
 header nav {
@@ -20,6 +23,16 @@ header nav {
     justify-content: space-between;
     width: 100%;
     height: 13vh;
+    background-color: #EF9595;
+}
+
+header img {
+    width: 50px;
+}
+
+header div {
+    display: flex;
+    align-items: center;
 }
 
 nav ul {
@@ -33,17 +46,20 @@ nav ul li {
     padding: 10px;
 }
 
-header img {
-    width: 50px;
+.main-encabezado {
+    height: 83vh;
+    display: flex;
+    justify-content: space-between;
+    background-image: url(./imagenes/campo-flores.jpeg);
+    background-size: cover;
+    font-family: 'Caveat', cursive;
+    font-size: 1.5em;
 }
 
-header div {
-    display: flex;
-    align-items: center;
-}
 .img-perfil {
     border-radius: 100%;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px  solid #EBEF95;
+    box-shadow: 0px 1px 4px 1px #EBEF95;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,6 +94,7 @@ img:hover {
     color: rgb(206, 106, 219);
     font-size: 1.2em;
     text-decoration: underline;
+    cursor: url('./imagenes/hoja-click.png'), auto;
 }
 
 .u-list {
