--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ nav ul li {
     background-image: url(./imagenes/campo-flores.jpeg);
     background-size: cover;
     font-family: 'Caveat', cursive;
+    font-size: 2em;
+}
+
+.main-encabezado h2 {
     font-size: 1.5em;
 }
 
@@ -68,6 +72,23 @@ nav ul li {
     margin: 0 auto;
 }
 
+.aboutMe-area {
+    background-color: #EF9595;
+    opacity: 0.7;
+    height: 50vh;
+}
+
+.aboutMe-area h3 {
+    display: flex;
+    justify-content: center;
+    font-size: 2em;
+}
+
+.aboutMe-area p {
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+}
 div {
     padding: 20px;
 }
