--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     cursor: url('./imagenes/hoja.png'), auto;
 }
 
+div {
+    padding: 20px;
+}
+
 header {
     background-color: #EF9595;
     opacity: 0.7;
@@ -89,10 +93,21 @@ nav ul li {
     justify-content: center;
     font-size: 1em;
 }
-div {
-    padding: 20px;
+
+.div-skills {
+    background-color: #EFB495;
+    opacity: 0.7;
 }
 
+.div-projects {
+    background-color: #EFD595;
+    opacity: 0.7;
+}
+
+.div-footer {
+    background-color: #EF9595;
+    opacity: 0.7;
+}
 h3 {
     color: rgb(238, 214, 255);
 }
