--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-body {
-    margin: 0;
-    cursor: url('./imagenes/hoja.png'), auto;
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Quicksand:wght@300..700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+* {
+    /* margin: 0; */
+    cursor: url('./imagenes/hojita.png'), auto;
+    font-family: "Quicksand", sans-serif;
+    color: #6b6d70;
 }
 
 div {
@@ -8,8 +13,7 @@ div {
 }
 
 header {
-    background-color: #EF9595;
-    opacity: 0.7;
+    background-color: #ffb1b2;
 }
 
 header a {
@@ -19,24 +23,24 @@ header a {
 header a:hover {
     color:#dab24c;
     font-size: 1.1em;
-    cursor: url('./imagenes/hoja-click.png'), auto;
+    cursor: pointer;
 }
 
 header nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 13vh;
-    background-color: #EF9595;
 }
 
 header img {
-    width: 50px;
+    width: 40px;
 }
 
 header div {
     display: flex;
     align-items: center;
+    justify-content: center;
+    padding: 5px 20px;
 }
 
 nav ul {
@@ -45,7 +49,10 @@ nav ul {
     list-style: none;
     text-decoration: none;
     align-items: center;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
+
 nav ul li {
     padding: 10px;
 }
@@ -56,12 +63,16 @@ nav ul li {
     justify-content: space-between;
     background-image: url(./imagenes/campo-flores.jpeg);
     background-size: cover;
-    font-family: 'Caveat', cursive;
-    font-size: 2em;
+}
+
+.main-encabezado h1 {
+    font-family: "Caveat", cursive;
+    font-size: 3rem;
 }
 
 .main-encabezado h2 {
-    font-size: 1.5em;
+    font-family: "Caveat", cursive;
+    font-size: 3.5rem;
 }
 
 .img-perfil {
@@ -77,36 +88,67 @@ nav ul li {
 }
 
 .aboutMe-area {
-    background-color: #EF9595;
-    opacity: 0.7;
-    height: 50vh;
+    background-color: #ffb1b2;
+    text-align: justify;
+    display: flex;
+    align-items: center;
+}
+
+.aboutMe-area div{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .aboutMe-area h3 {
     display: flex;
     justify-content: center;
     font-size: 2em;
+    transform: rotate(-90deg);
+    text-align: center;
 }
 
 .aboutMe-area p {
     display: flex;
     justify-content: center;
     font-size: 1em;
+    width: 80%;
 }
 
 .div-skills {
-    background-color: #EFB495;
-    opacity: 0.7;
+    background-color: #fdc8b2;
+    display: flex;
+    justify-content: space-around;
 }
 
 .div-projects {
-    background-color: #EFD595;
-    opacity: 0.7;
+    background-color: #f9e1b5;
+    display: flex;
+}
+
+.div-projects h3 {
+    text-align: center;
+    transform: rotate(-90deg);
+    width: 150px;
+}
+
+.div-projects img:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.closedBtn:hover {
+    cursor: pointer;
+}
+
+.title-projects {
+    display: flex;
+    align-items: center;
 }
 
 .div-footer {
-    background-color: #EF9595;
-    opacity: 0.7;
+    background-color: #ffb1b2;
 }
 
 .formulario {
@@ -129,7 +171,7 @@ form input {
 }
 
 h3 {
-    color: rgb(238, 214, 255);
+    color: rgba(255, 255, 255, 0.89);
 }
 img {
     width: 200px;
@@ -151,4 +193,36 @@ img:hover {
     font-size: 1.2em;
     text-decoration: underline;
     cursor: url('./imagenes/hoja-click.png'), auto;
+}
+
+.skills {
+    display: flex;
+    justify-content: center;
+    padding-top: 0px;
+    margin-top: 10px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
+.titleSkill {
+    display: flex;
+    align-items: center;
+}
+
+.skills h3 {
+    height: auto;
+    transform: rotate(-90deg);
+}
+
+.ojitas {
+    background-color: #668c6b;
+    border-radius: 30px;
+    padding: 5px 10px;
+    margin: 10px 0px 5px 5px;
+}
+
+.skillsList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
